--- a/static/css/metronic.css
+++ b/static/css/metronic.css
@@ -1,4 +1,4 @@
-/* Metronic UI System - Everlast ERP Implementation */
+/* Metronic UI System - Everlast HR System Implementation */
 
 /* Typography */
 body {
