--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1,4 +1,4 @@
-/* Everlast ERP - Responsive Design Enhancements */
+/* Everlast HR System - Responsive Design Enhancements */
 
 /* ===== Base Styles ===== */
 * {
